@@ -19,7 +19,7 @@ import static edu.colorado.phet.fractionsintro.buildafraction.model.BuildAFracti
  */
 public class DraggablePieceNode extends PNode {
     public DraggablePieceNode( final ObjectID id, final BuildAFractionModel model, final BuildAFractionCanvas canvas ) {
-        model.addChangeObserver( new ContainerObserver( id ) {
+        model.addObserver( new ContainerObserver( id ) {
             @Override public void applyChange( final Option<Container> old, final Option<Container> newOne ) {
                 removeAllChildren();
                 if ( newOne.isSome() ) {
@@ -44,7 +44,7 @@ public class DraggablePieceNode extends PNode {
                 else {
                     //If removed from model, remove this view class
                     getParent().removeChild( DraggablePieceNode.this );
-                    model.removeChangeObserver( this );
+                    model.removeObserver( this );
                 }
             }
         } );
