@@ -1,3 +1,4 @@
+Added draggable fractions
 Build a Fraction: Added draggable numbers
 Matching game: Color each bar the same color as the corresponding representation
 Matching game: Animate bars when checking answer
